fix(railway): pin torch CPU via constraints to stop CUDA downloads

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,13 +18,17 @@ WORKDIR /app
 
 # Copy requirements first for better Docker layer caching
 COPY requirements.txt .
+COPY constraints.txt .
+
+# Marker so we can confirm in Railway logs that the *latest* Dockerfile is being used
+RUN echo "Video Recap AI backend build: CPU torch pinned (v2)"
 
 # Install PyTorch CPU-only FIRST (before other packages pull in CUDA version)
 # This significantly reduces build time and image size
 RUN pip install --no-cache-dir torch==2.1.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 
 # Install remaining Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt -c constraints.txt
 
 # Download spaCy model
 RUN python -m spacy download en_core_web_sm
