--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,11 +40,12 @@ python-levenshtein==0.25.1
 # Google Gemini API
 google-generativeai>=0.8.0
 
-# PyTorch CPU-only (MUST be installed before sentence-transformers to avoid CUDA download)
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.1.0+cpu
+# PyTorch (CPU-only). The Dockerfile installs torch first; we keep this here so
+# pip dependency resolution stays aligned with constraints.txt.
+torch==2.2.2+cpu
 
 # Vector embeddings and semantic matching
-sentence-transformers>=2.2.0
+sentence-transformers==2.7.0
+transformers==4.39.3
 spacy>=3.7.0
 scikit-learn>=1.3.0
