--- a/saas-frontend/package.json
+++ b/saas-frontend/package.json
@@ -7,8 +7,8 @@
     "url": "https://twitter.com/mickasmt"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "turbo": "next dev --turbo",
     "start": "next start",
     "lint": "next lint",
