--- a/saas-frontend/package.json
+++ b/saas-frontend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "build": "next build",
     "turbo": "next dev --turbo",
     "start": "next start",
     "lint": "next lint",
@@ -61,9 +61,10 @@
     "concurrently": "^8.2.2",
     "contentlayer2": "^0.5.0",
     "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.414.0",
     "ms": "^2.1.3",
-    "next": "^16.1.0",
+    "next": "15.5.0",
     "next-auth": "^5.0.0-beta.25",
     "next-contentlayer2": "^0.5.0",
     "next-themes": "^0.3.0",
@@ -97,7 +98,7 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
