--- a/saas-frontend/vercel.json
+++ b/saas-frontend/vercel.json
@@ -17,6 +17,23 @@
   },
   "headers": [
     {
+      "source": "/api/auth/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store, no-cache, must-revalidate, proxy-revalidate"
+        },
+        {
+          "key": "Pragma",
+          "value": "no-cache"
+        },
+        {
+          "key": "Expires",
+          "value": "0"
+        }
+      ]
+    },
+    {
       "source": "/api/(.*)",
       "headers": [
         {
