--- a/saas-frontend/vercel.json
+++ b/saas-frontend/vercel.json
@@ -4,6 +4,19 @@
   "buildCommand": "prisma generate && next build",
   "installCommand": "npm install --legacy-peer-deps",
   "regions": ["iad1"],
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.app.videorecapai.com"
+        }
+      ],
+      "destination": "https://app.videorecapai.com/:path*",
+      "permanent": true
+    }
+  ],
   "functions": {
     "app/api/videos/upload/route.ts": {
       "maxDuration": 60
@@ -16,6 +29,24 @@
     }
   },
   "headers": [
+    {
+      "source": "/_static/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/fonts/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
     {
       "source": "/api/auth/(.*)",
       "headers": [
