test(payments): add stripe top-up webhook e2e script

--- a/saas-frontend/package.json
+++ b/saas-frontend/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint",
     "preview": "next build && next start",
     "postinstall": "prisma generate",
+    "test:topup": "node scripts/test-topup-webhook.js",
     "email": "email dev --dir emails --port 3333"
   },
   "dependencies": {
